// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu Selectable should render 1`] = `
<div>
  <div
    class="w-[200px]"
  >
    <div
      class="flex flex-col gap-1 max-w-[210px]"
    >
      <div
        class="relative w-full"
      >
        <div
          class="w-auto"
        >
          <button
            aria-label="Select a value"
            class="flex justify-between items-center font-normal border transition-all duration-300 outline-none active:enabled:outline-4 disabled:cursor-not-allowed disabled:opacity-50 text-base py-0 px-5 gap-3 h-[52px] rounded-lg text-white/85 bg-stone-500 border-stone-500 hover:enabled:bg-stone-600 hover:enabled:border-stone-600 active:enabled:outline-stone-200 [&_#spinner]:border-white/75 [&_#spinner]:border-r-white/25 w-full flex-nowrap"
          >
            <span
              class="truncate flex-shrink"
              data-test="dropdown-value"
            >
              Select a value
            </span>
            <div
              class="w-5 justify-self-end mt-0.5"
            >
              <svg
                aria-hidden="true"
                class="text-white transition-transform size-5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropdownMenu Selectable should render menu on label/button click 1`] = `
<div>
  <div
    class="w-[200px]"
  >
    <div
      class="flex flex-col gap-1 max-w-[210px]"
    >
      <div
        class="relative w-full"
      >
        <div
          class="w-auto"
        >
          <button
            aria-label="Select a value"
            class="flex justify-between items-center font-normal border transition-all duration-300 outline-none active:enabled:outline-4 disabled:cursor-not-allowed disabled:opacity-50 text-base py-0 px-5 gap-3 h-[52px] rounded-lg text-white/85 bg-stone-500 border-stone-500 hover:enabled:bg-stone-600 hover:enabled:border-stone-600 active:enabled:outline-stone-200 [&_#spinner]:border-white/75 [&_#spinner]:border-r-white/25 w-full flex-nowrap"
          >
            <span
              class="truncate flex-shrink"
              data-test="dropdown-value"
            >
              Select a value
            </span>
            <div
              class="w-5 justify-self-end mb-0.5"
            >
              <svg
                aria-hidden="true"
                class="text-white transition-transform size-5 rotate-180"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
        </div>
        <div>
          <div
            class="bg-white shadow rounded-sm absolute z-[999] overflow-hidden menu-enter menu-enter-active"
            data-test="dropdown-menu"
            style="position: absolute; top: 0px; left: 0px; visibility: hidden;"
          >
            <ul
              class="flex flex-col"
            >
              <li
                class="w-full"
              >
                <button
                  aria-current="false"
                  aria-disabled="false"
                  aria-label="Quick save "
                  class="flex items-center font-normal transition-all duration-300 outline-none active:enabled:outline-4 disabled:cursor-not-allowed disabled:opacity-50 text-base py-0 px-5 gap-3 h-[52px] bg-transparent border-0 active:enabled:outline-none rounded-none text-stone-500 truncate text-left w-full flex-nowrap justify-start !px-4 !h-10"
                >
                  <span
                    class="truncate flex-shrink"
                    id="item-Quick save"
                  >
                    Quick save 
                  </span>
                </button>
              </li>
              <li
                class="w-full"
              >
                <button
                  aria-current="false"
                  aria-disabled="false"
                  aria-label="Save"
                  class="flex items-center font-normal transition-all duration-300 outline-none active:enabled:outline-4 disabled:cursor-not-allowed disabled:opacity-50 text-base py-0 px-5 gap-3 h-[52px] bg-transparent border-0 active:enabled:outline-none rounded-none text-stone-500 truncate text-left w-full flex-nowrap justify-start !px-4 !h-10"
                >
                  <span
                    class="truncate flex-shrink"
                    id="item-Save"
                  >
                    Save
                  </span>
                </button>
              </li>
              <li
                class="w-full"
              >
                <button
                  aria-current="false"
                  aria-disabled="false"
                  aria-label="Reassign"
                  class="flex items-center font-normal transition-all duration-300 outline-none active:enabled:outline-4 disabled:cursor-not-allowed disabled:opacity-50 text-base py-0 px-5 gap-3 h-[52px] bg-transparent border-0 active:enabled:outline-none rounded-none text-stone-500 truncate text-left w-full flex-nowrap justify-start !px-4 !h-10"
                >
                  <span
                    class="truncate flex-shrink"
                    id="item-Reassign"
                  >
                    Reassign
                  </span>
                </button>
              </li>
              <li
                class="w-full"
              >
                <button
                  aria-current="false"
                  aria-disabled="false"
                  aria-label="Edit"
                  class="flex items-center font-normal transition-all duration-300 outline-none active:enabled:outline-4 disabled:cursor-not-allowed disabled:opacity-50 text-base py-0 px-5 gap-3 h-[52px] bg-transparent border-0 active:enabled:outline-none rounded-none text-stone-500 truncate text-left w-full flex-nowrap justify-start !px-4 !h-10"
                >
                  <span
                    class="truncate flex-shrink"
                    id="item-Edit"
                  >
                    Edit
                  </span>
                </button>
              </li>
              <li
                class="w-full"
              >
                <button
                  aria-current="false"
                  aria-disabled="false"
                  aria-label="Delete"
                  class="flex items-center font-normal transition-all duration-300 outline-none active:enabled:outline-4 disabled:cursor-not-allowed disabled:opacity-50 text-base py-0 px-5 gap-3 h-[52px] bg-transparent border-0 active:enabled:outline-none rounded-none text-stone-500 truncate text-left w-full flex-nowrap justify-start !px-4 !h-10"
                >
                  <span
                    class="truncate flex-shrink"
                    id="item-Delete"
                  >
                    Delete
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
